--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2774,6 +2774,26 @@ body.is-touch .poptrox-popup .closer {
   .poptrox-popup .nav-previous:before {
     margin-top: -1em;
   }
+  .work-item {
+    margin: 0 0 2em 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .work-item .image {
+    margin: 0 0 1.5em 0;
+  }
+  .work-item h2 {
+    margin: 0 0 0.5em 0;
+  }
+  .work-item p {
+    font-size: 0.9em;
+    line-height: 1.5em;
+    margin: 0 0 2em 0;
+  }
+  .work-item .work-summary {
+    padding-right: 1.5em;
+  }
 }
 /* XSmall */
 @media screen and (max-width: 480px) {
@@ -2791,6 +2811,26 @@ body.is-touch .poptrox-popup .closer {
     line-height: 2.25em;
     margin-left: 0;
     padding-left: 0;
+  }
+  .work-item {
+    margin: 0 0 2em 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .work-item .image {
+    margin: 0 0 1.5em 0;
+  }
+  .work-item h2 {
+    margin: 0 0 0.5em 0;
+  }
+  .work-item p {
+    font-size: 0.9em;
+    line-height: 1.5em;
+    margin: 0 0 2em 0;
+  }
+  .work-item .work-summary {
+    padding-right: 1.5em;
   }
 }
 
