--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1841,7 +1841,7 @@ body.is-touch {
 	.work-item {
 		margin: 0 0 _size(element-margin) 0;
 		display: flex;
-		flex-direction: column;
+		flex-direction: column-reverse;
 		justify-content: space-between;
 	
 		.image {
