changed for small screen as well

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2777,7 +2777,7 @@ body.is-touch .poptrox-popup .closer {
   .work-item {
     margin: 0 0 2em 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: space-between;
   }
   .work-item .image {
