--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -472,7 +472,6 @@ header {
 		margin-top: (_size(element-margin) * -0.4);
 		line-height: 1.5em;
 	}
-
 	h4+p,
 	h5+p,
 	h6+p {
@@ -1199,10 +1198,21 @@ input[type="button"],
 		margin-top: (_size(element-margin)*0.5);
 	}
 	header {
-		h4+p{
-			margin-top: (_size(element-margin)*-0.75);
-			margin-bottom: 0
+		h5{
+			color:_palette(fg-light);
+			font-size: 0.9em;
 		}
+		h4+h5,
+		h5+h5{
+
+			
+			margin-top: (_size(element-margin)*-0.75);
+			margin-bottom: (_size(element-margin)*0.75);		}
+		h4+p,		
+		h5+p{
+			margin-top: (_size(element-margin)*-0.75);			
+		}
+		
 	}
 }
 
@@ -1562,6 +1572,10 @@ body.is-touch {
 		>.inner {
 			margin-bottom: 0;
 		}
+
+		h4 {
+			font-size: 1em;
+		}
 	}
 
 	/* Footer */
@@ -1684,6 +1698,31 @@ body.is-touch {
 		padding: ($size-header-pad * 1.5) $size-header-pad;
 		width: 100%;
 	}
+
+	
+	.work-item {
+		margin: 0 0 _size(element-margin) 0;
+		display: flex;
+		flex-direction:  column-reverse;;
+		justify-content: space-between;
+	
+		.image {
+			margin: 0 0 (_size(element-margin) * 0.75) 0;			
+		}
+	
+		h2{
+			margin: 0 0 (_size(element-margin) * 0.25) 0;
+		}
+	
+		p {
+			font-size: 0.9em;
+			line-height: 1.5em;
+			margin: 0 0 (_size(element-margin) ) 0;
+		}
+	
+		.work-summary{			
+			padding-right: _size(element-margin) * 0.75		
+		}
 
 }
 
@@ -1864,4 +1903,4 @@ body.is-touch {
 	}
 
 
-}
+}}
