--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1836,6 +1836,8 @@ input[type=radio] + label:before {
 }
 .image.fit img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .image.avatar {
   border-radius: 100%;
@@ -2630,37 +2632,24 @@ body.is-touch .poptrox-popup .closer {
 }
 /* Large */
 @media screen and (max-width: 1280px) {
-  /* Header */
+  body,
+  input,
+  select,
+  textarea {
+    font-size: 12pt;
+  }
   #header {
-    padding: 6em 3em 3em 3em;
-    width: 30%;
-  }
-  #header h1 {
-    font-size: 1.25em;
-  }
-  #header h1 br {
-    display: none;
+    padding: 4em 2em;
+    width: 35%;
   }
   #header > .inner {
-    margin-bottom: 0;
+    padding-left: 2em;
   }
-  #header h4 {
-    font-size: 1em;
-  }
-  /* Footer */
-  #footer .copyright li {
-    border-left-width: 0;
-    display: block;
-    line-height: 2.25em;
-    margin-left: 0;
-    padding-left: 0;
-  }
-  /* Main */
   #main {
-    margin-left: 30%;
+    margin-left: 35%;
     max-width: none;
-    padding: 6em 3em 3em 3em;
-    width: calc(100% - 30%);
+    padding: 4em 2em 2em 2em;
+    width: calc(100% - 35%);
   }
 }
 /* Medium */
@@ -2751,10 +2740,9 @@ body.is-touch .poptrox-popup .closer {
   .work-item .work-summary {
     padding-right: 1.5em;
   }
-  /* Small */
-  /* XSmall */
 }
-@media screen and (max-width: 980px) and (max-width: 736px) {
+/* Small */
+@media screen and (max-width: 736px) {
   /* Basic */
   h1 {
     font-size: 1.5em;
@@ -2828,7 +2816,8 @@ body.is-touch .poptrox-popup .closer {
     padding-right: 1.5em;
   }
 }
-@media screen and (max-width: 980px) and (max-width: 480px) {
+/* XSmall */
+@media screen and (max-width: 480px) {
   /* Header */
   #header {
     padding: 4.5em 1.5em;
