--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -792,6 +792,8 @@ input[type="radio"] {
 
 		img {
 			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 
@@ -1551,48 +1553,23 @@ body.is-touch {
 /* Large */
 
 @include breakpoint('<=large') {
+	$size-header-width: 35%;
 
-	$size-header-width: 30%;
-	$size-header-pad: 3em;
-
-	/* Header */
+	body,
+	input,
+	select,
+	textarea {
+		font-size: 12pt;
+	}
 
 	#header {
-		padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;
+		padding: ($size-header-pad * 2) $size-header-pad ;
 		width: $size-header-width;
 
-		h1 {
-			font-size: 1.25em;
-
-			br {
-				display: none;
-			}
-		}
-
 		>.inner {
-			margin-bottom: 0;
-		}
-
-		h4 {
-			font-size: 1em;
+			padding-left: ($size-header-pad);
 		}
 	}
-
-	/* Footer */
-
-	#footer {
-		.copyright {
-			li {
-				border-left-width: 0;
-				display: block;
-				line-height: 2.25em;
-				margin-left: 0;
-				padding-left: 0;
-			}
-		}
-	}
-
-	/* Main */
 
 	#main {
 		margin-left: $size-header-width;
@@ -1600,6 +1577,56 @@ body.is-touch {
 		padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;
 		width: calc(100% - #{$size-header-width});
 	}
+
+	
+
+	
+
+	// /* Header */
+
+	// #header {
+	// 	padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;
+	// 	width: $size-header-width;
+
+	// 	h1 {
+	// 		font-size: 2.25em;
+
+	// 		br {
+	// 			display: none;
+	// 		}
+	// 	}
+
+	// 	>.inner {
+	// 		margin-bottom: 0;
+	// 	}
+
+	// 	h4 {
+	// 		font-size: 1em;
+	// 	}
+	// }
+
+	// /* Footer */
+
+	// #footer {
+	// 	.copyright {
+	// 		li {
+	// 			border-left-width: 0;
+	// 			display: block;
+	// 			line-height: 2.25em;
+	// 			margin-left: 0;
+	// 			padding-left: 0;
+	// 		}
+	// 	}
+	// }
+
+	// /* Main */
+
+	// #main {
+	// 	margin-left: $size-header-width;
+	// 	max-width: none;
+	// 	padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;
+	// 	width: calc(100% - #{$size-header-width});
+	// }
 
 }
 
@@ -1723,6 +1750,7 @@ body.is-touch {
 		.work-summary{			
 			padding-right: _size(element-margin) * 0.75		
 		}
+	}
 
 }
 
@@ -1903,4 +1931,4 @@ body.is-touch {
 	}
 
 
-}}
+}	
